apps/saldo/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: saldo
  name: saldo

spec:
  template:
    spec:
      containers:
        - name: saldo

          command:
            - sh
            - -c
            - cp /app/data/prod.db /app/data/staging.db && exec node server.js
