apps/saldo/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  namespace: saldo
  name: saldo-ing

spec:
  rules:
    - host: staging.saldo.ttj.hu
